# space-path-planning

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: a_star_demo.cpp  replanning_demo.cpp
docs/: article-1-astar.md  article-2-dstar-lite.md  trace-format.md
include/core/: heuristics.h  path_planner.h  point.h  priority_list.h  search_trace.h
include/maps/: graph.h  grid.h
include/planners/: a_star.h  a_star.tpp  d_lite.h  d_lite.tpp  d_star.h  d_star.tpp
src/maps/: grid.cpp  search_trace.cpp
tests/: test_a_star.cpp  test_d_lite.cpp  test_d_star.cpp  test_grid.cpp  test_priority_list.cpp
tools/visualizer/: render_trace.py
